biscuit-terminal/lib/src/components/snapshots/biscuit_terminal__components__horizontal_rule__tests__browser_curtain_rod_medium.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: result
---
<svg width="100%" height="40" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto 0 auto;">
  <line x1="5%" y1="50%" x2="95%" y2="50%" stroke="currentColor" stroke-width="4" stroke-linecap="round"/>
  <circle cx="5%" cy="50%" r="4" fill="currentColor"/>
  <circle cx="95%" cy="50%" r="4" fill="currentColor"/>
</svg>
