biscuit-terminal/lib/src/components/snapshots/biscuit_terminal__components__horizontal_rule__tests__browser_custom_attributes.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: browser_result1
---
<svg width="75%" height="40" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto 0 auto;">
  <path d="M0 20 Q 10 10 20 20 T 40 20 T 60 20 T 80 20 T 100 20 T 120 20 T 140 20 T 160 20 T 180 20 T 200 20" stroke="red" stroke-width="8" fill="none" stroke-linecap="round"/>
</svg>
