biscuit-terminal/lib/src/components/snapshots/biscuit_terminal__components__horizontal_rule__tests__browser_dots_thick.snap
---
source: biscuit-terminal/lib/src/components/horizontal_rule.rs
expression: result
---
<svg width="100%" height="40" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto 0 auto;">
  <line x1="0" y1="50%" x2="100%" y2="50%" stroke="currentColor" stroke-width="8" stroke-linecap="round" stroke-dasharray="2,6"/>
</svg>
